--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.1.0",
     "@ngrx/effects": "^15.3.0",
     "@ngrx/store": "^15.3.0",
+    "@ngrx/store-devtools": "^15.3.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "rxjs": "~7.8.0",
